<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitleFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="15sp"
        android:text="@string/TitleFirstPage"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/txtRGM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitleFirst"
        android:layout_marginLeft="35sp"
        android:text="@string/rgm"
        android:textSize="24sp"
        android:textStyle="bold"
    />

    <EditText
        android:id="@+id/edtRGM"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_below="@id/txtRGM"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="35sp"
        android:inputType="phone"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtRGM"
        android:layout_marginTop="35sp"
        android:layout_marginLeft="35sp"
        android:layout_marginBottom="20sp"
        android:text="@string/password"
       android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_below="@id/txtSenha"
        android:layout_marginLeft="35sp"
        android:inputType="textPassword"
        android:text="@string/rgm"
        android:textSize="24sp"
        android:textStyle="bold"
    />

    <Button
        android:id="@+id/btnConectar"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@id/edtSenha"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttonshapebackground"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:text="@string/btnConectar"
        android:clickable="true"
        />


    <Button
        android:id="@+id/btnSair"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@id/btnConectar"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="-60dp"
        android:layout_toRightOf="@id/btnConectar"
        android:background="@drawable/buttonshapeborder"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:fontFamily="sans-serif-medium"
        android:text="@string/btnSair"
        android:textColor="#6A30F0"
        android:clickable="true"
    />

</RelativeLayout>